[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-aminobots"
version = "1.0.0"
authors = [
    {name="ViktorSky", email="viktorbotsprojects@gmail.com"},
]
description = "Async API Wrapper for Amino"
readme = "readme.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["amino", "bot", "bots", "async"]

[project.urls]
"Homepage" = "https://github.com/ViktorSky/python-aminobots"
"Bug Tracker" = "https://github.com/ViktorSky/python-aminobots/issues"